# BookwritterPro

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-server.txt  requirements.txt
bookwriter/: __init__.py  cli.py  config.py  images.py  kdp.py  llm.py  llm_claude_cli.py  llm_cli.py  llm_openai.py  mcp_server.py  mock.py  pdf.py  pipeline.py  planner.py  print_export.py  provider.py  royalties.py  runtime_config.py  serve.py  store.py  writer.py
bookwriter/server/: api.py  schemas.py  service.py
bookwriter/web/: app.js  index.html  kdp.js  styles.css
docs/: ARCHITECTURE.md  MCP.md
tests/: test_api.py  test_hardening.py  test_images.py  test_mcp.py  test_pipeline.py  test_print.py  test_providers.py  test_settings.py
