[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookwriterpro"
version = "1.0.0"
description = "Token-cost-optimized local book generation with a continuity knowledge graph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Valentino", email = "valentinohelp@gmail.com" }]
keywords = ["ai", "book-generation", "llm", "anthropic", "claude", "mcp", "kdp", "writing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
# Cap the volatile LLM SDK below the next major so a future breaking release
# can't silently change the request shape relied on in llm.py.
dependencies = ["anthropic>=0.69,<1"]

[project.urls]
Homepage = "https://github.com/RealDealCPA-VR/BookwritterPro"
Repository = "https://github.com/RealDealCPA-VR/BookwritterPro"
Issues = "https://github.com/RealDealCPA-VR/BookwritterPro/issues"

[project.optional-dependencies]
server = ["fastapi>=0.110,<1", "uvicorn[standard]>=0.27", "httpx>=0.27"]
mcp = ["mcp>=1.2"]
openai = ["openai>=1.40,<2"]

[project.scripts]
bookwriter = "bookwriter.cli:main"
bookwriter-serve = "bookwriter.serve:main"

[tool.setuptools]
packages = ["bookwriter", "bookwriter.server"]
include-package-data = true

[tool.setuptools.package-data]
# Recursive so any future web/ subdir (assets, fonts) ships too.
bookwriter = ["web/**/*"]
